--- a/notebooks/Stage1.ipynb
+++ b/notebooks/Stage1.ipynb
@@ -3669,6 +3669,43 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Positive Sentiment (positive_count):\n",
+        "\n",
+        "Correlation with stock price: -0.23\n",
+        "Remains consistent with prior findings, showing a weak negative relationship between positive sentiment and Tesla's stock price.\n",
+        "\n",
+        "Negative Sentiment (negative_count):\n",
+        "\n",
+        "Correlation with stock price: -0.013\n",
+        "Similarly negligible, indicating minimal direct influence.\n",
+        "\n",
+        "Neutral Sentiment (neutral_count):\n",
+        "\n",
+        "Correlation with stock price: -0.094\n",
+        "Slightly stronger (but still weak) negative correlation than positive and negative sentiments. This might imply that neutral sentiment, often the majority class, could mask smaller effects from positive or negative sentiment.\n"
+      ],
+      "metadata": {
+        "id": "eZVgd5qvdFUW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Neutral Sentiment with Others:\n",
+        "\n",
+        "Correlation with positive_count: 0.29\n",
+        "Correlation with negative_count: 0.57\n",
+        "Highlights a moderate association, suggesting that days with more neutral coverage often coincide with increased reporting in other sentiment categories. This might reflect broader media activity on Tesla during significant news days."
+      ],
+      "metadata": {
+        "id": "4n3HDmo7dSTc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Redéfinir X et y\n",
@@ -3783,9 +3820,36 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Les corrélations faibles et les scores médiocres montrent que ni les sentiments, ni les quantités d'articles par sentiment, ne suffisent pour prédire efficacement les prix des actions Tesla.\n",
+        "Insights from the Correlation Heatmap:\n",
         "\n",
-        "Les articles de presse seuls ne capturent pas les facteurs fondamentaux qui influencent les prix des actions (données financières, résultats d’entreprise, annonces économiques, etc.)."
+        "Positive Sentiment (positive_count):\n",
+        "\n",
+        "Correlation with price change: 0.39\n",
+        "Shows a moderate positive relationship, indicating that an increase in positive sentiment might coincide with positive stock price variations.\n",
+        "\n",
+        "Negative Sentiment (negative_count):\n",
+        "\n",
+        "Correlation with price change: -0.33\n",
+        "Indicates a moderate negative relationship, where a rise in negative sentiment might correspond to negative stock price changes.\n",
+        "\n",
+        "Neutral Sentiment (neutral_count):\n",
+        "\n",
+        "Correlation with price change: -0.13\n",
+        "Displays a weak negative correlation, suggesting that the presence of neutral articles has minimal influence on price changes.\n",
+        "\n",
+        "Model Performance:\n",
+        "\n",
+        "Mean Squared Error (MSE): 385.39\n",
+        "\n",
+        "The relatively high MSE indicates the model struggles to minimize prediction errors effectively.\n",
+        "R² Score: -1.82\n",
+        "\n",
+        "The negative R² score confirms that the linear regression model fails to explain the variance in stock price changes based on sentiment variables.\n",
+        "\n",
+        "\n",
+        "**Observations**:\n",
+        "The moderate correlations for positive and negative sentiments suggest some relationship exists with price changes, but it is insufficient for reliable prediction.\n",
+        "The weak performance of the model highlights the limitations of using only sentiment counts to predict price variations.\n"
       ],
       "metadata": {
         "id": "8gesrEJ1WbaR"
